# insight-lens

./: .gitignore  ATTRIBUTION.md  AUTHORS.md  CLAUDE.md  CONTEXT.md  LICENSE  PROMOTION_SUGGESTIONS_PLAN.md  README.md  TODO.md  extracted_data.json  mkdocs.yml  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tailwind.config.js  test-ollama.sh  test-openai-key.sh  tsconfig.json  unit_survey_extractor.js  vite.config.ts
.github/workflows/: build.yml  ci.yml  web-docker.yml
docs/: README.md  _config.yml  index.md  notarization.md
docs/adr/: 0001-data-access-repository-and-readonly-ai-channel.md
docs/ai-chat/: asking-questions.md  setup-ai-providers.md
docs/essential-workflow/: exploring-trends.md  importing-data.md  unit-detail.md  unit-filtering.md
docs/getting-started/: dashboard-overview.md  first-run.md  installation.md  sidebar-navigation.md
docs/reference/: database.md  faq.md  glossary.md  import_unit_offering_and_benchmarks.py  keyboard-shortcuts.md  specification.md
docs/reports/: performance-reports.md  promotion-suggestions.md
docs/technical/: schema.md
docs/user-guide/: cli.md  (+2 more)
examples/: basic_usage.py
insightlens/: .gitignore  README.md  package.json  vite.config.ts
public/: icon.icns
scripts/: build_packages.py  notarize.js
surveysavvy/: __init__.py
test/: test_extractor.html
tests/: test_dashboard.py  test_database.py  test_generator.py
web/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.server.json  vite.config.ts
(+185 files in other folders)
