[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "surveysavvy"
version = "0.1.0"
description = "Student Unit Survey Database Generator"
authors = [
    {name = "SurveySavvy Team"},
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "typer",
    "rich",
    "sqlalchemy",
    "anthropic",
    "pandas",
    "faker",
    "numpy",
]

[project.optional-dependencies]
pdf = [
    "pymupdf",  # PDF processing for survey data extraction
]
dev = [
    "pytest>=7.0.0",
    "ruff",
    "mkdocs",
    "mkdocs-material",
]
web = [
    "python-fasthtml",
    "plotly",
    "uvicorn[standard]",
]

[project.scripts]
surveysavvy = "surveysavvy.cli.main:app"

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "I", "B", "W", "C4"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"